feat: add special asset pairs
