# swagger/swagger.yaml
@@ -1281,6 +1281,77 @@ paths:
           type: string
       tags:
         - Query
+  /umee/leverage/v1/special_asset_pairs:
+    get:
+      summary: SpecialAssetPairs queries for all special asset pairs.
+      operationId: SpecialAssetPairs
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              pairs:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    collateral:
+                      type: string
+                      description: >-
+                        Collateral is the denomination of the collateral base
+                        token.
+                    borrow:
+                      type: string
+                      description: Borrow is the denomination of the borrowed base token.
+                    collateral_weight:
+                      type: string
+                      description: >-
+                        Collateral Weight defines what portion of the total
+                        value of the asset
+
+                        can contribute to a users borrowing power. For special
+                        asset pairs, this
+
+                        also overrides the borrowed asset's collateral weight
+                        when eveluating borrow
+
+                        factor.
+                  description: >-
+                    SpecialAssetPair defines a special (increased)
+                    CollateralWeight used when a specified Collateral is used
+
+                    to collateralize a specified Borrow. This association is
+                    one-way (so it does not work in reverse).
+            description: >-
+              QuerySpecialAssetPairsResponse defines the response structure for
+              the
+
+              SpecialAssetPairs gRPC service handler.
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    type_url:
+                      type: string
+                    value:
+                      type: string
+                      format: byte
+      tags:
+        - Query
   /umee/historacle/v1/avg_price/{denom}:
     get:
       summary: QueryAvgPrice returns avg price of a given denom (required).
@@ -4484,6 +4555,42 @@ definitions:
     description: |-
       QueryRegisteredTokensResponse defines the response structure for the
       RegisteredTokens gRPC service handler.
+  umee.leverage.v1.QuerySpecialAssetPairsResponse:
+    type: object
+    properties:
+      pairs:
+        type: array
+        items:
+          type: object
+          properties:
+            collateral:
+              type: string
+              description: Collateral is the denomination of the collateral base token.
+            borrow:
+              type: string
+              description: Borrow is the denomination of the borrowed base token.
+            collateral_weight:
+              type: string
+              description: >-
+                Collateral Weight defines what portion of the total value of the
+                asset
+
+                can contribute to a users borrowing power. For special asset
+                pairs, this
+
+                also overrides the borrowed asset's collateral weight when
+                eveluating borrow
+
+                factor.
+          description: >-
+            SpecialAssetPair defines a special (increased) CollateralWeight used
+            when a specified Collateral is used
+
+            to collateralize a specified Borrow. This association is one-way (so
+            it does not work in reverse).
+    description: |-
+      QuerySpecialAssetPairsResponse defines the response structure for the
+      SpecialAssetPairs gRPC service handler.
   umee.leverage.v1.RiskInfo:
     type: object
     properties:
@@ -4502,6 +4609,33 @@ definitions:
     description: >-
       RiskInfo defines a borrower's account health without requiring sdk.Dec
       formatting.
+  umee.leverage.v1.SpecialAssetPair:
+    type: object
+    properties:
+      collateral:
+        type: string
+        description: Collateral is the denomination of the collateral base token.
+      borrow:
+        type: string
+        description: Borrow is the denomination of the borrowed base token.
+      collateral_weight:
+        type: string
+        description: >-
+          Collateral Weight defines what portion of the total value of the asset
+
+          can contribute to a users borrowing power. For special asset pairs,
+          this
+
+          also overrides the borrowed asset's collateral weight when eveluating
+          borrow
+
+          factor.
+    description: >-
+      SpecialAssetPair defines a special (increased) CollateralWeight used when
+      a specified Collateral is used
+
+      to collateralize a specified Borrow. This association is one-way (so it
+      does not work in reverse).
   umee.leverage.v1.Token:
     type: object
     properties:
