# x/leverage/types/errors.go
@@ -25,8 +25,10 @@ var (
 		ModuleName, 206,
 		"collateral weight of Token is zero: can't be used as a collateral",
 	)
-	ErrDuplicateToken          = errors.Register(ModuleName, 207, "duplicate token")
-	ErrEmptyAddAndUpdateTokens = errors.Register(ModuleName, 208, "empty add and update tokens")
+	ErrDuplicateToken               = errors.Register(ModuleName, 207, "duplicate token")
+	ErrEmptyAddAndUpdateTokens      = errors.Register(ModuleName, 208, "empty add and update tokens")
+	ErrEmptyUpdateSpecialAssetPairs = errors.Register(ModuleName, 209, "empty update special asset pairs")
+	ErrDuplicatePair                = errors.Register(ModuleName, 210, "duplicate special asset pair")
 
 	// 3XX = User Positions
 	ErrInsufficientBalance    = errors.Register(ModuleName, 300, "insufficient balance")
